# ai-explainer-app

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
chalk/: CLAUDE.md  pyproject.toml
chalk/examples/: chemistry_demo.py  chemistry_demo2.py  circuits_demo.py  circuits_demo2.py  claude_code.py  coding_demo.py  counter_demo.py  damped_oscillation.py  demo.py  graph_demo.py  graph_demo2.py  kirchhoff.py  mathtex_demo.py  morph_demo.py  newton.py  number_plane_demo.py  orbit_demo.py  physics_demo.py  physics_demo2.py  showcase.py  voltage_divider.py
chalk/tests/: conftest.py  test_animation.py  test_animation_group.py  test_axes_shift.py  test_brace.py  test_c1_remaining.py  test_c2_demos_snapshot.py  test_calculus_regression.py  test_chemistry.py  test_circuits.py  test_cli.py  test_coding.py  test_composites.py  test_connectable.py  test_coord.py  test_emphasis.py  test_graph.py  test_helpers_molecule_seriesloop.py  test_layout_bbox_overlap.py  test_layout_overlap.py  test_layout_style.py  test_lint.py  test_mobject.py  test_multi_panel.py  test_new_primitives.py  test_path_motion.py  test_physics.py  test_preflight.py  test_rate_funcs.py  test_redraw.py  test_renderer.py  test_sections_snapshot.py  test_shapes.py  test_svg.py  test_tables.py  test_tex.py  test_tex_morph.py  test_text_write.py  test_value_tracker.py  test_wire_breaks.py
schemas/: pyproject.toml
schemas/tests/: test_base.py  test_critique.py  test_roundtrip.py  test_schemas.py
tools/: pyproject.toml
tools/tests/: __init__.py  conftest.py  (+13 more)
(+210 files in other folders)
