[project]
name = "pedagogica-schemas"
version = "0.0.1"
description = "Pydantic message schemas for Pedagogica agents"
requires-python = ">=3.12"
dependencies = ["pydantic>=2.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pedagogica_schemas"]
