[project]
name = "pedagogica-tools"
version = "0.0.1"
description = "Pedagogica pipeline helpers — Manim render, TTS, mux, trace, view"
requires-python = ">=3.12"
dependencies = [
    "pedagogica-schemas",
    "typer>=0.12",
    "pydantic>=2.8",
]

[project.scripts]
pedagogica-tools = "pedagogica_tools.cli:app"

[tool.uv.sources]
pedagogica-schemas = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pedagogica_tools"]
